--- a/BSA2018-Hometask2/wwwroot/css/site.css
+++ b/BSA2018-Hometask2/wwwroot/css/site.css
@@ -1,10 +1,17 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    padding-top: 50px;
+    padding-top: 0px;
     padding-bottom: 20px;
 }
 
+.divider {
+    height: 1px;
+    width: 100%;
+    margin: 9px;
+    overflow: hidden;
+    background-color: #e5e5e5;
+}
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
@@ -35,3 +42,5 @@ body {
         display: none;
     }
 }
+
+
