--- a/BSA2018-Hometask2/Views/Shared/Partial/PostView.cshtml
+++ b/BSA2018-Hometask2/Views/Shared/Partial/PostView.cshtml
@@ -29,7 +29,7 @@
                     <ul class="list-group">
                         @foreach (var item in Model.Comments)
                         {
-                            await Html.RenderPartialAsync("CommentView", item);
+                            await Html.RenderPartialAsync("Partial/CommentView", item);
                         }
                     </ul>
                 </div>
