--- a/BSA2018-Hometask2/Views/Home/Index.cshtml
+++ b/BSA2018-Hometask2/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">
-                            @Html.ActionLink(item.Name,"Index","User",item.Id)
+                            @Html.ActionLink(item.Name,"Index","User",new { id = item.Id })
                         </h4>
                     </div>
                 </span>
@@ -26,7 +26,7 @@
                     {
                         await Html.RenderPartialAsync("Partial/PostView", post);
                     }
-                    <br />
+
                 </span>
                 <span>
                     <h3>
