--- a/BSA2018-Hometask2/Views/User/UserView.cshtml
+++ b/BSA2018-Hometask2/Views/User/UserView.cshtml
@@ -20,10 +20,23 @@
     <dd class="col-sm-9">@Model.CreatedAt</dd>
 
     <dt class="col-sm-3 text-truncate">Posts</dt>
+    @if (Model.Posts.Count > 0)
+    {
+        <dd class="col-sm-9">@Html.ActionLink(Model.Posts.Count.ToString(), "Index", "Post", new { id = Model.Id })</dd>
+    }
+    else
+    {<dd class="col-sm-9">@Model.Posts.Count.ToString()</dd>}
     
 
     <dt class="col-sm-3 text-truncate">Todos</dt>
-    <dd class="col-sm-9">@Model.Todos.Count</dd>
+    @if (Model.Todos.Count > 0)
+    {
+        <dd class="col-sm-9">@Html.ActionLink(Model.Todos.Count.ToString(), "Index", "Todo", new { id = Model.Id })</dd>
+    }
+    else
+
+    {<dd class="col-sm-9">@Model.Todos.Count.ToString()</dd>}
+    
 </dl>
 
 
