--- a/BSA2018-Hometask2/Views/Shared/_Layout.cshtml
+++ b/BSA2018-Hometask2/Views/Shared/_Layout.cshtml
@@ -27,11 +27,22 @@
                 </button>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
+
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Page 1</a></li>
-                    <li><a href="#">Page 2</a></li>
-                    <li><a href="#">Page 3</a></li>
+                    <li class="active"><a href="Home/Index">Home</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Selections
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="@Url.Action("EnterId", "Selection",new { name = "CommentsUnderUserPost" })">CommentsUnderUserPost</a></li>
+                            <li><a href="@Url.Action("EnterId", "Selection",new { name = "CommentUnderUserPostBodyMoreThen50" })">CommentUnderUserPostBodyMoreThen50</a></li>
+                            <li><a href="@Url.Action("EnterId","Selection",new { name = "CompletedUsersTodos" })">CompletedUsersTodos</a></li>
+                            <li><a href="@Url.Action("EnterId","Selection",new { name = "UsersInfo" })">UsersInfo</a></li>
+                            <li><a href="@Url.Action("EnterId","Selection",new { name = "PostInfo" })">PostInfo</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
