--- a/BSA2018-Hometask2/Views/Shared/_Layout.cshtml
+++ b/BSA2018-Hometask2/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
 
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="Home/Index">Home</a></li>
+                    <li class="active"><a href="@Url.Action("Index", "Home")">Home</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                             Selections
